# trex-keyholder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.test.yml  docker-compose.yml  restart.sh  run.sh  rust-toolchain.toml
core-primitives/aes-siv/: Cargo.toml  LICENSE-APACHE
core-primitives/aes-siv/src/: lib.rs  siv.rs
core-primitives/hash/: Cargo.toml
core-primitives/hash/src/: lib.rs
core-primitives/nonce-cache/: Cargo.toml
core-primitives/nonce-cache/src/: error.rs  lib.rs  nonce_cache.rs
core-primitives/settings/: Cargo.toml
core-primitives/settings/src/: lib.rs
core-primitives/sgx/crypto/: Cargo.toml
core-primitives/sgx/crypto/src/: aes.rs  ed25519.rs  ed25519_derivation.rs  error.rs  key_repository.rs  lib.rs  mocks.rs  rsa3072.rs  traits.rs
core-primitives/sgx/io/: Cargo.toml
core-primitives/sgx/io/src/: lib.rs
core-primitives/substrate-sgx/environmental/: Cargo.toml
core-primitives/substrate-sgx/environmental/src/: lib.rs
core-primitives/substrate-sgx/externalities/: Cargo.toml
core-primitives/substrate-sgx/externalities/src/: bypass.rs  codec_impl.rs  lib.rs  scope_limited.rs  vectorize.rs
core-primitives/substrate-sgx/sp-io/: Cargo.toml
docker/: builder.Dockerfile  keyholder.Dockerfile  test.Dockerfile
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave-runtime/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml
enclave-runtime/ocall-api/: Cargo.toml
enclave-runtime/ocall-api/src/: lib.rs
enclave-runtime/src/: attestation.rs  cert.rs  error.rs  hex.rs  lib.rs  nts.rs
enclave-runtime/src/aeadnts/: aead.rs  mod.rs  protocol.rs
enclave-runtime/src/byteorder/: io.rs  mod.rs
enclave-runtime/src/nts_protocol/: protocol.rs
enclave-runtime/src/ocall/: ffi.rs  mod.rs
enclave-runtime/src/records/: aead_algorithm.rs  cookie.rs  end_of_message.rs  error.rs  mod.rs  new_cookie.rs  next_protocol.rs  port.rs  server.rs  warning.rs
enclave-runtime/src/utils/: mod.rs  node_metadata.rs
enclave/src/: lib.rs
service/: Cargo.toml  Makefile  build.rs
service/src/: cli.rs  config.rs  config.yml  main.rs  ocall_impl.rs  seed.yml
service/src/enclave/: api.rs  error.rs  ffi.rs  mod.rs
service/src/ocall/: mod.rs  ocall_impl.rs
service/src/test/: enclave.rs  mod.rs  primitive.rs  utils.rs
service/src/utils/: key_piece.rs  mod.rs  node_metadata.rs  node_rpc.rs
