[workspace]
members = [
    "service",
]

[patch.'https://github.com/NexTokenTech/teaclave-sgx-sdk.git']
sgx_types = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_crypto_helper = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_urts = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}