[package]
name = "enclave-runtime"
version = "1.0.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
edition = "2021"

[workspace]
members = []

[lib]
name = "enclave_runtime" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"]  }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { package = "sgx_tcrypto_helper", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand    = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
#sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
#kvdb = { git = "https://github.com/mesalock-linux/parity-common-sgx" }
#kvdb-memorydb = { git = "https://github.com/mesalock-linux/parity-common-sgx" }

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
branch = "mesalock_sgx"
features = ["dangerous_configuration"]

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
# sgx_align_struct_attribute = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_alloc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_backtrace = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_backtrace_sys = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_build_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_cov = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_crypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_demangle = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_libc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_no_tstd = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_rand = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_rand_derive = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_serialize = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_serialize_derive = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_serialize_derive_internals = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_tcrypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_tdh = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_tkey_exchange = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_tprotected_fs = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_trts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_tse = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_tseal = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_tstd = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_tunittest = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
sgx_types = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_ucrypto = { path = "../../../sgx_ucrypto" }
# sgx_unwind = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5" }
# sgx_urts = { path = "../../../sgx_urts" }