[package]
name = "enclave-runtime"
version = "1.0.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
edition = "2021"

[workspace]
members = []

# Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
[lib]
name = "enclave_runtime"
crate-type = ["staticlib"]

[features]
default = []

# You can remove what you don't need, except types and tstd
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6", features = ["untrusted_fs","net","backtrace"]  }
sgx_tcrypto = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_trts = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_tseal = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_serialize = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_alloc = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_libc = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_crypto_helper = { package = "sgx_tcrypto_helper", git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_tse     = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_rand    = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
chrono = { git = "https://github.com/NexTokenTech/chrono-sgx" }
webpki = { git = "https://github.com/NexTokenTech/webpki-sgx", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/NexTokenTech/rust-base64-sgx" }
yasna = { git = "https://github.com/NexTokenTech/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/NexTokenTech/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/NexTokenTech/webpki-roots-sgx", branch = "mesalock_sgx" }
serde_json = { git = "https://github.com/NexTokenTech/serde-json-sgx" }
serde = { git = "https://github.com/NexTokenTech/serde-sgx" }
# serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
rand = { git = "https://github.com/NexTokenTech/rand-sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
derive_more = { version = "0.99.5" }

log = { git = "https://github.com/NexTokenTech/log-sgx" }

tkp-hash = { path = "../core-primitives/hash", default-features = false, features = ["sgx"] }
tkp-settings = { path = "../core-primitives/settings", default-features = false}
tkp-sgx-io = { path = "../core-primitives/sgx/io", default-features = false, features = ["sgx"] }
tkp-sgx-crypto = { path = "../core-primitives/sgx/crypto", default-features = false, features = ["sgx"] }
tkp-nonce-cache = { path = "../core-primitives/nonce-cache", default-features = false, features = ["sgx"] }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false,features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-finality-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], path = "../core-primitives/substrate-sgx/sp-io" }

substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.27" }

aes-siv = { path = "../core-primitives/aes-siv"}
byteorder = { version = "1" , default-features = false}

[dependencies.rustls]
git = "https://github.com/NexTokenTech/rustls-sgx"
branch = "mesalock_sgx"
features = ["dangerous_configuration"]

#[patch.crates-io]
#env_logger = { git = "https://github.com/integritee-network/env_logger-sgx" }
#getrandom = { git = "https://github.com/integritee-network/getrandom-sgx", branch = "update-v2.3" }
#log = { git = "https://github.com/integritee-network/log-sgx" }

#[patch."https://github.com/NexTokenTech/log-sgx"]
#log = { git = "https://github.com/NexTokenTech/log-sgx" }

[patch."https://github.com/paritytech/substrate"]
sp-io = { path = "../core-primitives/substrate-sgx/sp-io" }

[patch.'https://github.com/NexTokenTech/teaclave-sgx-sdk.git']
sgx_alloc = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_backtrace_sys = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_build_helper = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_crypto_helper = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_demangle = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_libc = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_rand = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_serialize = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_tcrypto = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_tcrypto_helper = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_tprotected_fs = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_trts = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_tse = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_tseal = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_tstd = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}
sgx_types = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk"}