[package]
name = "trex-keyholder"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2021"

[workspace]
members = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
derive_more = "0.99.16"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
serde_derive = "1.0"
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
log = { version = "0.4.14"}
env_logger = "0.9.0"
ws = { version = "0.9.2", features = ["ssl"] }
serde_yaml = "0.9.14"

# Substrate dependencies
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
#trex-runtime = {version = "4.0.0-dev", git = "https://github.com/NexTokenTech/TREX", branch = "main"}

# SCS dependencies
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.27" }


[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_crypto_helper = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_ucrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }