[package]
name = "trex-keyholder"
version = "1.0.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
build = "build.rs"
edition = "2021"

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
derive_more = "0.99.16"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"

sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
log = { version = "0.4.14"}
env_logger = "0.9.0"
ws = { version = "0.9.2", features = ["ssl"] }
serde_yaml = "0.9.14"
dirs = "3.0.2"
clap = { version = "2.33", features = ["yaml"] }

tkp-settings = { path = "../core-primitives/settings" }

# Substrate dependencies
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
trex-runtime = {version = "4.0.0-dev", git = "https://github.com/NexTokenTech/TREX", branch = "main"}

# SCS dependencies
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.30" }