[package]
name = "tkp-hash"
version = "1.0.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
edition = "2021"

[dependencies]
# sgx dependencies
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6", optional = true }
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.2", optional = true }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" , optional = true }


[features]
default = ["std"]
std = [
    "sha2",
    "sp-core"
]
sgx = [
    "sgx_tstd",
]