[package]
name = "tkp-settings"
version = "0.9.0"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
edition = "2021"

[dependencies]


[features]
production = []
sidechain = []
offchain-worker = []
teeracle = []
