[package]
name = "tkp-ocall-api"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.5" }

# sgx deps
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[features]
default = ["std"]
std = [
    "codec/std"
]
