[package]
name = "tkp-sgx-crypto"
version = "0.8.0"
edition = "2021"
authors = ["NexToken Tech LLC <team@trex.ink> and Integritee AG <hello@integritee.network>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.6.0" }
ofb = { version = "0.4.0" }
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.5" }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

# sgx deps
sgx_types = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk",  version="1.1.6" }
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk",  version="1.1.6", optional = true }
sgx_rand = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk",  version="1.1.6", optional = true }
sgx-crypto-helper = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk",  version="1.1.6", package = "sgx_crypto_helper", default-features = false }
serde-sgx = { package = "serde", git = "https://github.com/NexTokenTech/serde-sgx", optional = true  }
serde_json-sgx = { package = "serde_json", git = "https://github.com/NexTokenTech/serde-json-sgx", optional = true  }

# substrate deps
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

# local deps
tkp-settings = { path = "../../settings" }
tkp-sgx-io = { path = "../io", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "tkp-sgx-io/std",
    "sp-core/std",
    "serde/std",
    "serde_json/std",
    "sgx-crypto-helper/default",
]
sgx = [
    "sgx-crypto-helper/mesalock_sgx",
    "sgx_tstd",
    "sgx_rand",
    "tkp-sgx-io/sgx",
    "serde_json-sgx",
    "serde-sgx"
]
mocks = []
