[package]
name = "tkp-sgx-io"
version = "0.8.0"
edition = "2021"
authors = ["NexToken Tech LLC <team@trex.ink>"]
homepage = "https://trex.ink"
repository = "https://github.com/NexTokenTech/trex-keyholder"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# sgx deps
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6", optional = true }

[features]
default = ["std"]
std = []
sgx = [
    "sgx_tstd"
]
