[package]
name = "environmental"
description = "Set scope-limited values can can be accessed statically"
version = "1.1.3"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6", optional = true, features = ["thread"] }

[features]
default = ["std"]
std = []
sgx = ["sgx_tstd"]
