[package]
name = "itp-sgx-externalities"
version = "0.8.0"
authors = ["NexToken Tech LLC <team@trex.ink> and Integritee AG <hello@integritee.network> and Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# no_std
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive", "chain-error"]}
derive_more = "0.99.16"
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "0.7.2", default-features = false, features = ["alloc"] }

# sgx dependencies
sgx_tstd = { optional = true, features = ["untrusted_fs","net","backtrace"], git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }
sgx_types = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6" }

# local
environmental = { path = "../environmental", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "environmental/std",
    "log/std",
    "postcard/use-std",
    "serde/std",
]
sgx = [
    "sgx_tstd",
    "environmental/sgx",
]
